# cci

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CODING_STYLE.txt  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL.md  LICENSE  Makefile.am  Makefile.defs  NEWS  NOTICE  README.md  README.txt  RELEASENOTES  RELEASENOTES.md  configure.ac
configuration/src/: CMakeLists.txt  cci_configuration
docs/: CMakeLists.txt  DEVELOPMENT.md  INSTALL_USING_AUTOTOOLS.md  Makefile.am
docs/cci/: README
examples/: CMakeLists.txt  Compile_and_Run_CCI_Examples.ppt  Makefile  Makefile.am  README  README.md  README.txt  doxygen_guidelines  review_checklist
examples/build-msvc/: Makefile  Makefile.config  Makefile.rules  README.md  READMEcommandlinemsvc.txt  cci_examples.sln  vsvars.bat
examples/build-unix/: Makefile  Makefile.common  Makefile.config  Makefile.gs_cci  Makefile.rules
examples/cci/: Makefile.am
examples/ex00_Key_Concepts/: ex00_Key_Concepts.cpp  ex00_Param_Owner.h  ex00_Param_Tracker.h  ex00_Param_User.h  ex00_Param_User_Class.h  ex00_Subsystem.h  ex00_Top.h
examples/ex01_Simple_Int_Param/: ex01_Simple_Int_Param.cpp  ex01_config_ip.h  ex01_simple_ip.h  simple_ip.h
examples/ex02_Fully_Supported_Data_Type_Param/: config_ip.h  ex02_Fully_Supported_Data_Type_Param.cpp  ex02_config_ip.h  ex02_simple_ip.h
examples/ex03_Elab_Time_Param/: config_ip.h  ex03_Elab_Time_Param.cpp  ex03_config_ip.h  ex03_simple_ip.h  main.cpp  simple_ip.h
examples/ex04_Simple_Immutable_Param/: config_ip.h  ex04_Simple_Immutable_Param.cpp  ex04_config_ip.h  ex04_simple_ip.h
examples/ex05_Default_and_Initial_Value/: config_ip.h  ex05_Default_and_Initial_Value.cpp  ex05_config_ip.h  ex05_simple_ip.h
examples/ex05_Default_and_Preset_Value/: ex05_Default_and_Preset_Value.cpp  ex05_config_ip.h  ex05_simple_ip.h
examples/ex06_Parameter_Naming/: config_ip.h  ex06_Parameter_Naming.cpp  ex06_config_ip.h  ex06_simple_ip.h  simple_ip.h
examples/ex07_Parameter_Information/: README.txt  ex07_Parameter_Information.cpp  ex07_observer.h  ex07_parameter_configurer.h  ex07_parameter_owner.h
examples/ex08_Parameter_Value_Change_Callbacks/: config_ip.h  ex08_Parameter_Value_Change_Callbacks.cpp  ex08_config_ip.h  ex08_simple_ip.h
examples/ex09_Hierarchical_Override_of_Parameter_Values/: ex09_Hierarchical_Override_of_Parameter_Values.cpp  ex09_initiator.h  ex09_master.h  ex09_router.h  ex09_slave.h  ex09_target.h  ex09_top_module.h
examples/ex10_Shared_Parameters/: ex10_Shared_Parameters.cpp  ex10_parameter_configurator.h  ex10_parameter_owner.h
examples/ex11_Directly_Associating_Parameters/: ex11_Directly_Associating_Parameters.cpp
examples/ex11_Searching_and_Directly_Associating_Parameters/: README.txt  ex11_Searching_and_Directly_Associating_Parameters.cpp  ex11_param_value_sync.h  ex11_parameter_configurator.h  ex11_parameter_owner.h  ex11_top_module.h  parameter_owner.h
examples/ex12_Indirectly_Associating_Parameters/: README.txt  ex12_Indirectly_Associating_Parameters.cpp  ex12_param_value_sync_with_cf.h  ex12_parameter_configurator.h  ex12_parameter_owner.h  ex12_top_module.h  param_value_sync_with_cf.h  parameter_configurator.h  top_module.h
examples/ex12_Searching_and_Indirectly_Associating_Parameters/: README.txt
examples/ex13_Parameter_Value_Locking/: README.txt  ex13_Parameter_Value_Locking.cpp  ex13_parameter_configurator.h  ex13_parameter_owner.h
examples/ex14_Hiding_Parameters/: README.txt  ex14_Hiding_Parameters.cpp  ex14_child.h  ex14_configurator.h  ex14_parent.h
examples/ex15_Inter_Parameter_Value_Constraints/: README.txt  ex15_Inter_Parameter_Value_Constraints.cpp  ex15_address_lines_register.h  ex15_configurator.h  ex15_memory_block.h  ex15_processor.h
examples/ex16_User_Defined_Data_Type/: ex16_User_Defined_Data_Type.cpp  ex16_observer.h  ex16_parameter_configurer.h  ex16_parameter_owner.h  ex16_user_datatype.h  observer.h  user_datatype.h
examples/ex17_Preset_Values_from_Config_File/: ex17_Preset_Values_from_Config_File.cpp  ex17_parameter_configurator.h  ex17_parameter_owner.h
examples/ex17_Specifying_Parameter_Values_via_a_Configuration_File/: Configuration_File.txt  README.txt  cci_configFile_Tool.h  ex17_Specifying_Parameter_Values_via_a_Configuration_File.cpp  ex17_cci_configFile_Tool.h  ex17_configset.h  ex17_parameter_configurator.h  ex17_parameter_owner.h  parameter_configurator.h
examples/ex18_Preset_Values_Superset/: ex18_Preset_Values_Superset.cpp  ex18_cci_configFile_Tool.h  ex18_parameter_configurator.h
examples/ex18_Superset_Parameter_Value_Specification/: Configuration_File.txt  README.txt  ex18_Superset_Parameter_Value_Specification.cpp  ex18_cci_configFile_Tool.h  ex18_configset.h  ex18_parameter_configurator.h  ex18_parameter_owner.h  main.cpp  parameter_owner.h
examples/ex19_Api_and_Parameter_Implementations_from_Different_Providers/: ex19_Api_and_Parameter_Implementations_from_Different_Providers.cpp  ex19_Api_and_Parameter_Implementations_from_Different_Providers.f  ex19_Different_Providers.cpp  ex19_parameter_configurator.h  ex19_parameter_impl_by_abc.cpp  ex19_parameter_impl_by_abc.h  ex19_parameter_owner.h  main.f  parameter_impl_by_abc.cpp  parameter_impl_by_abc.h
examples/ex19_Reset_Param/: ex19_Reset_Param.cpp  ex19_config_ip.h  ex19_simple_ip.h
examples/ex20_Tracing_Parameter_Activity/: ex20_Tracing_Parameter_Activity.cpp  ex20_observer.h  ex20_parameter_owner.h  parameter_owner.h
examples/ex21_Param_Destruction_Resurrection/: ex21_Param_Destruction_Resurrection.cpp  ex21_config_ip.h  ex21_simple_ip.h
examples/ex22_Search_Predicate/: ex22_Search_Predicate.cpp  ex22_search_ip.h  ex22_simple_ip.h
examples/ex23_Hierarchical_Value_Update/: ex23_Hierarchical_Value_Update.cpp  ex23_config_ip.h  ex23_simple_ip.h
examples/ex24_Reset_Param/: ex24_Reset_Param.cpp  ex24_config_ip.h  ex24_simple_ip.h
examples/ex26_Speed_Test/: ex26_Speed_Test.cpp  ex26_config_ip.h  ex26_simple_ip.h
examples/ex7_Parameter_Information/: README.txt  observer.h  parameter_owner.h
test/: CMakeLists.txt  README.md
(+1569 files in other folders)
